--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
-vendor/aravis*
-configure/*.local
+/vendor/aravis-*
+#configure/*.local
 O.*/
-bin/
-lib/
-dbd/
-db/
-data/
+/bin/
+/cmake-build-debug/
+/lib/
+/dbd/
+/db/
+/data/
+/iocs/example/
+/iocs/example_sim/
+/iocs/*/bin/
+/iocs/*/lib/
+/iocs/*/dbd/
+/iocs/*/db/
+/iocs/*/data/
 .project
 .cproject
 .settings/
@@ -16,4 +24,5 @@ dllPath.bat
 auto_settings.sav*
 *~
 *.swp
+.idea/
 
